[gd_scene load_steps=6 format=3 uid="uid://bps71bxfi3jvw"]

[ext_resource type="Script" uid="uid://dlwdoreeforee" path="res://scripts/game_won.gd" id="1_8qx7a"]
[ext_resource type="Texture2D" uid="uid://dlovkj526sjmr" path="res://assets/GameOver Background.png" id="2_ol4t4"]
[ext_resource type="Texture2D" uid="uid://d1ucglmj14llv" path="res://assets/pieces/Rainbow.png" id="3_k5fdv"]
[ext_resource type="Texture2D" uid="uid://i7ca7ok40wj5" path="res://assets/buttons/next_level_button.png" id="6_8qx7a"]
[ext_resource type="Texture2D" uid="uid://bx7uow2jqv73x" path="res://assets/buttons/main_menu_button.png" id="6_34cnp"]

[node name="game_won" type="Node2D"]
script = ExtResource("1_8qx7a")

[node name="GameOverBackground" type="Sprite2D" parent="."]
modulate = Color(0.121569, 0.878431, 0.262745, 1)
position = Vector2(291, 302)
texture = ExtResource("2_ol4t4")

[node name="Rainbow" type="Sprite2D" parent="."]
position = Vector2(288.5, 283.5)
scale = Vector2(1.66406, 1.66406)
texture = ExtResource("3_k5fdv")

[node name="main_menu_button" type="TextureButton" parent="."]
offset_left = -448.0
offset_top = -137.0
offset_right = 752.0
offset_bottom = 1063.0
scale = Vector2(0.12, 0.12)
pivot_offset = Vector2(600, 600)
texture_normal = ExtResource("6_34cnp")

[node name="next_level_button" type="TextureButton" parent="."]
offset_left = -170.0
offset_top = -139.0
offset_right = 1030.0
offset_bottom = 1061.0
scale = Vector2(0.12, 0.12)
pivot_offset = Vector2(600, 600)
texture_normal = ExtResource("6_8qx7a")

[connection signal="mouse_entered" from="main_menu_button" to="." method="_on_main_menu_button_mouse_entered"]
[connection signal="mouse_exited" from="main_menu_button" to="." method="_on_main_menu_button_mouse_exited"]
[connection signal="pressed" from="main_menu_button" to="." method="_on_main_menu_button_pressed"]
[connection signal="mouse_entered" from="next_level_button" to="." method="_on_next_level_button_mouse_entered"]
[connection signal="mouse_exited" from="next_level_button" to="." method="_on_next_level_button_mouse_exited"]
[connection signal="pressed" from="next_level_button" to="." method="_on_next_level_button_pressed"]
